<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NTP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading ...</string>
    <string name="connection_error">Problem with Internet Connection ...</string>
    <string name="update_after">Update After : </string>
    <string name="update_now">Update Now</string>
    <string name="no_internet_detected">No Internet Connection Detected</string>
    <string name="retry">Retry !</string>

</resources>
