<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/loader_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:spb_sections_count="5"
            app:spb_colors="@array/pocket_background_colors"
            app:spb_speed="1.0"
            app:spb_stroke_width="4dp"
            app:spb_stroke_separator_length="4dp"
            app:spb_reversed="false"
            app:spb_mirror_mode="false"
            app:spb_progressiveStart_activated="true"
            app:spb_progressiveStart_speed="1.5"
            app:spb_progressiveStop_speed="3.4"
            app:spb_interpolator="spb_interpolator_acceleratedecelerate" />
    </LinearLayout>

    <LinearLayout
    android:id="@+id/error_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:visibility="gone">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/no_connection"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_detected"
        android:gravity="center"
        android:layout_marginTop="20dp"/>
    <info.hoang8f.widget.FButton
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:padding="5dp"
        android:id="@+id/retry"
        android:layout_marginBottom="48dp"
        fbutton:buttonColor="#f1c40f"
        fbutton:shadowColor="#f39c12"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="5dp"
        fbutton:cornerRadius="2dp"
        android:textColor="#ffffff"
        android:visibility="visible"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>