<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".NTPHome">
    <LinearLayout
        android:id="@+id/loader_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:spb_sections_count="5"
            app:spb_colors="@array/pocket_background_colors"
            app:spb_speed="1.0"
            app:spb_stroke_width="4dp"
            app:spb_stroke_separator_length="4dp"
            app:spb_reversed="false"
            app:spb_mirror_mode="false"
            app:spb_progressiveStart_activated="true"
            app:spb_progressiveStart_speed="1.5"
            app:spb_progressiveStop_speed="3.4"
            app:spb_interpolator="spb_interpolator_acceleratedecelerate" />
    </LinearLayout>
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/timer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <mohheader.ntp.views.DigitalTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/digital_clock"
            android:layout_centerInParent="true"
            android:textSize="60sp"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="48dp"/>
        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/digital_clock"
            android:layout_centerHorizontal="true"
            android:gravity="center"/>
        <info.hoang8f.widget.FButton
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/update_now"
            android:padding="5dp"
            android:id="@+id/update"
            android:layout_below="@id/digital_clock"
            android:layout_centerHorizontal="true"
            fbutton:buttonColor="#3498db"
            fbutton:shadowColor="#2980b9"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="5dp"
            android:textColor="#ffffff"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_after"
            android:id="@+id/update_after"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/count_down"
            android:layout_alignTop="@+id/update_after"
            android:layout_toRightOf="@+id/update_after"
            android:layout_marginLeft="8dp"/>

    </RelativeLayout>
</RelativeLayout>
